Major refactoring and final comments